@@ -28,6 +28,7 @@ import java.util.TimeZone;
 import java.util.regex.Pattern;
 import no.einnsyn.backend.EinnsynControllerTestBase;
 import no.einnsyn.backend.authentication.bruker.models.TokenResponse;
+import no.einnsyn.backend.common.exceptions.models.NetworkException;
 import no.einnsyn.backend.common.expandablefield.ExpandableField;
 import no.einnsyn.backend.common.responses.models.PaginatedList;
 import no.einnsyn.backend.entities.apikey.models.ApiKeyDTO;
@@ -39,8 +40,6 @@ import no.einnsyn.backend.entities.innsynskrav.models.InnsynskravDTO;
 import no.einnsyn.backend.entities.innsynskravbestilling.models.InnsynskravBestillingDTO;
 import no.einnsyn.backend.entities.journalpost.models.JournalpostDTO;
 import no.einnsyn.backend.entities.saksmappe.models.SaksmappeDTO;
-import no.einnsyn.clients.ip.exceptions.IPConnectionException;
-import org.apache.commons.io.IOUtils;
 import org.awaitility.Awaitility;
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -220,30 +219,28 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     assertEquals(true, innsynskravBestillingDTO.getVerified());
     var innsynskravBestilling = innsynskravBestillingService.find(innsynskravBestillingId);
 
-    var expectedXml =
-        IOUtils.toString(
-            Objects.requireNonNull(
-                InnsynskravBestillingControllerTest.class
-                    .getClassLoader()
-                    .getResourceAsStream("order-v1.xml")),
-            StandardCharsets.UTF_8);
+    String expectedXml;
+    try (var is =
+        Objects.requireNonNull(
+            InnsynskravBestillingControllerTest.class
+                .getClassLoader()
+                .getResourceAsStream("order-v1.xml"))) {
+      expectedXml = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+    }
     var orderCaptor = ArgumentCaptor.forClass(String.class);
     var mailCaptor = ArgumentCaptor.forClass(String.class);
 
-    // Verify that IPSender was called
+    // Verify that the integrasjonspunkt client was called
     Awaitility.await()
         .untilAsserted(
             () ->
                 verify(ipSender, times(1))
                     .sendInnsynskrav(
                         orderCaptor.capture(), // Order.xml
-                        any(String.class), // transaction id
                         eq(handteresAvDTO.getOrgnummer()), // handteresAv
                         eq(enhetDTO.getOrgnummer()),
                         eq(enhetDTO.getInnsynskravEpost()),
-                        mailCaptor.capture(), // mail content
-                        any(String.class), // IP orgnummer
-                        any(Integer.class) // expectedResponseTimeoutDays
+                        mailCaptor.capture() // mail content
                         ));
 
     // Verify the XML contents. The fields "id" and "bestillingsdato" will change at runtime, so we
@@ -421,31 +418,29 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
 
     // Verify sending attempt
     // Confirmation email?
-    // IPSender
-    var expectedXml =
-        IOUtils.toString(
-            Objects.requireNonNull(
-                InnsynskravBestillingControllerTest.class
-                    .getClassLoader()
-                    .getResourceAsStream("order-v2.xml")),
-            StandardCharsets.UTF_8);
+    // Integrasjonspunkt client
+    String expectedXml;
+    try (var is =
+        Objects.requireNonNull(
+            InnsynskravBestillingControllerTest.class
+                .getClassLoader()
+                .getResourceAsStream("order-v2.xml"))) {
+      expectedXml = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+    }
     var orderCaptor = ArgumentCaptor.forClass(String.class);
     var mailCaptor = ArgumentCaptor.forClass(String.class);
 
-    // Verify that IPSender was called
+    // Verify that the integrasjonspunkt client was called
     Awaitility.await()
         .untilAsserted(
             () ->
                 verify(ipSender, times(1))
                     .sendInnsynskrav(
                         orderCaptor.capture(), // Order.xml
-                        any(String.class), // transaction id
                         eq(enhetOrderV2DTO.getOrgnummer()), // handteresAv
                         eq(enhetOrderV2DTO.getOrgnummer()),
                         eq(enhetOrderV2DTO.getInnsynskravEpost()),
-                        mailCaptor.capture(), // mail content
-                        any(String.class), // IP orgnummer
-                        any(Integer.class) // expectedResponseTimeoutDays
+                        mailCaptor.capture() // mail content
                         ));
 
     // Verify contents of order.xml. Replace placeholders with runtime values.
@@ -515,6 +510,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     assertEquals(HttpStatus.OK, response.getStatusCode());
     response = delete("/arkiv/" + arkivSysidDTO.getId());
     assertEquals(HttpStatus.OK, response.getStatusCode());
+    awaitSideEffects();
   }
 
   @Test
@@ -559,10 +555,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class));
+            any(String.class));
 
     // Delete the InnsynskravBestilling
     var deleteResponse = deleteAdmin("/innsynskravBestilling/" + innsynskravBestillingDTO.getId());
@@ -688,10 +681,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
                         any(String.class),
                         any(String.class),
                         any(String.class),
-                        any(String.class),
-                        any(String.class),
-                        any(String.class),
-                        any(Integer.class)));
+                        any(String.class)));
 
     var actualOrders =
         orderCaptor.getAllValues().stream().map(this::extractOrderedDocuments).toList();
@@ -721,50 +711,45 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     Awaitility.await()
         .untilAsserted(() -> verify(javaMailSender, times(2)).send(mimeMessageCaptor.capture()));
 
+    var firstVirksomhet = gson.fromJson(get("/enhet/" + journalenhetId).getBody(), EnhetDTO.class);
+    var secondVirksomhet =
+        gson.fromJson(get("/enhet/" + journalenhet2Id).getBody(), EnhetDTO.class);
+
     // Find the correct mail
     var txtContent =
-        findMailTextContaining(mimeMessageCaptor.getAllValues(), "Saksnr: 2020/10 | Dok nr. : 1");
+        normalizeLineEndings(
+            findMailTextContaining(mimeMessageCaptor.getAllValues(), "Sakstittel:"));
+    assertTrue(txtContent.contains("Sakstittel: testOffentligTittelSensitiv"));
+    assertTrue(txtContent.contains("Journaltittel: JournalpostOffentligTittelSensitiv"));
+    assertTrue(txtContent.contains(firstVirksomhet.getNavn()));
+    assertTrue(txtContent.contains(secondVirksomhet.getNavn()));
+    assertTrue(txtContent.contains("innsynskravepost@example.com"));
     // Check the order in that mail
     assertDocumentsInOrder(
         txtContent,
         List.of(
-            "Saksnr: 2020/10 | Dok nr. : 1",
-            "Saksnr: 2020/10 | Dok nr. : 2",
-            "Saksnr: 2020/10 | Dok nr. : 3",
-            "Saksnr: 2020/11 | Dok nr. : 1",
-            "Saksnr: 2020/11 | Dok nr. : 2",
-            "Saksnr: 2020/20 | Dok nr. : 2",
-            "Saksnr: 2020/20 | Dok nr. : 3",
-            "Saksnr: 2020/20 | Dok nr. : 4",
-            "Saksnr: 2020/21 | Dok nr. : 1",
-            "Saksnr: 2020/21 | Dok nr. : 2",
-            "Saksnr: 2021/30 | Dok nr. : 1",
-            "Saksnr: 2021/30 | Dok nr. : 2",
-            "Saksnr: 2021/30 | Dok nr. : 3",
-            "Saksnr: 2022/40 | Dok nr. : 1",
-            "Saksnr: 2022/40 | Dok nr. : 2",
-            "Saksnr: 2022/40 | Dok nr. : 3"));
+            firstVirksomhet.getNavn() + ", " + firstVirksomhet.getInnsynskravEpost(),
+            "Doknr: 1\nSaksnr: 2020/10",
+            "Doknr: 2\nSaksnr: 2020/10",
+            "Doknr: 3\nSaksnr: 2020/10",
+            "Doknr: 1\nSaksnr: 2020/11",
+            "Doknr: 2\nSaksnr: 2020/11",
+            "Doknr: 1\nSaksnr: 2021/30",
+            "Doknr: 2\nSaksnr: 2021/30",
+            "Doknr: 3\nSaksnr: 2021/30",
+            secondVirksomhet.getNavn() + ", " + secondVirksomhet.getInnsynskravEpost(),
+            "Doknr: 2\nSaksnr: 2020/20",
+            "Doknr: 3\nSaksnr: 2020/20",
+            "Doknr: 4\nSaksnr: 2020/20",
+            "Doknr: 1\nSaksnr: 2020/21",
+            "Doknr: 2\nSaksnr: 2020/21",
+            "Doknr: 1\nSaksnr: 2022/40",
+            "Doknr: 2\nSaksnr: 2022/40",
+            "Doknr: 3\nSaksnr: 2022/40"));
 
     response = deleteAdmin("/innsynskravBestilling/" + innsynskravBestillingDTO.getId());
     assertEquals(HttpStatus.OK, response.getStatusCode());
     deleteInnsynskravFromBestilling(innsynskravBestillingDTO);
-
-    delete("/journalpost/" + jp11.getId());
-    delete("/journalpost/" + jp12.getId());
-    delete("/journalpost/" + jp13.getId());
-    delete("/journalpost/" + jp21.getId());
-    delete("/journalpost/" + jp22.getId());
-    delete("/journalpost/" + jp51.getId());
-    delete("/journalpost/" + jp52.getId());
-    delete("/journalpost/" + jp53.getId());
-    delete("/journalpost/" + jp31.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp32.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp33.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp41.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp42.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp61.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp62.getId(), journalenhet2Key);
-    delete("/journalpost/" + jp63.getId(), journalenhet2Key);
 
     delete("/saksmappe/" + saksmappe1.getId());
     delete("/saksmappe/" + saksmappe2.getId());
@@ -772,6 +757,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     delete("/saksmappe/" + saksmappe3.getId(), journalenhet2Key);
     delete("/saksmappe/" + saksmappe4.getId(), journalenhet2Key);
     delete("/saksmappe/" + saksmappe6.getId(), journalenhet2Key);
+    awaitSideEffects();
   }
 
   @Test
@@ -795,17 +781,14 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     Awaitility.await()
         .untilAsserted(() -> verify(javaMailSender, times(1)).send(any(MimeMessage.class)));
 
-    // Check that InnsynskravSenderService didn't send anything to IPSender
+    // Check that InnsynskravSenderService didn't send anything to the integrasjonspunkt client
     verify(ipSender, times(0))
         .sendInnsynskrav(
             any(String.class),
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class));
+            any(String.class));
 
     // Verify the InnsynskravBestilling
     var verificationSecret = innsynskravTestService.getVerificationSecret(innsynskravBestillingId);
@@ -822,17 +805,15 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     Awaitility.await()
         .untilAsserted(() -> verify(javaMailSender, times(3)).send(any(MimeMessage.class)));
 
-    // Check that InnsynskravSenderService sent to IPSender
+    // Check that InnsynskravSenderService sent to the integrasjonspunkt client
     verify(ipSender, times(1))
         .sendInnsynskrav(
-            any(String.class),
             any(String.class),
             any(String.class), // HandteresAv
             any(String.class), // Administrativ enhet
             eq("innsynskravepost@example.com"),
-            any(String.class), // Email text. TODO: Verify that the journalpost titles are mentioned
-            any(String.class),
-            any(Integer.class));
+            any(String.class) // Email text. TODO: Verify that the journalpost titles are mentioned
+            );
 
     // Verify that the InnsynskravBestilling and Innsynskravs are in the DB
     assertEquals(
@@ -951,10 +932,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class));
+            any(String.class));
 
     // Verify the second Innsynskravbestilling
     verifyAnonymousInnsynskravBestilling(innsynskravBestillingDTO2.getId());
@@ -986,10 +964,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class));
+            any(String.class));
 
     // Cleanup
     // Delete both InnsynskravBestilling
@@ -1048,17 +1023,14 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     innsynskravJSON.put("journalpost", journalpostDTO.getId());
     innsynskravBestillingJSON.put("innsynskrav", new JSONArray().put(innsynskravJSON));
 
-    // Make IPSender fail the first time, then succed the second time
+    // Make the integrasjonspunkt client fail the first time, then succeed the second time
     when(ipSender.sendInnsynskrav(
             any(String.class),
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class)))
-        .thenThrow(new IPConnectionException("", null))
+            any(String.class)))
+        .thenThrow(new NetworkException(""))
         .thenReturn("foo");
 
     // Insert InnsynskravBestilling
@@ -1091,10 +1063,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
                         any(String.class),
                         any(String.class),
                         any(String.class),
-                        any(String.class),
-                        any(String.class),
-                        any(String.class),
-                        any(Integer.class)));
+                        any(String.class)));
 
     // Check that InnsynskravSenderService tried to send two emails (one with verification
     // link, one confirmation)
@@ -1112,10 +1081,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class));
+            any(String.class));
 
     // Check that the innsynskrav is sent
     innsynskravTestService.assertSent(innsynskravBestillingId);
@@ -1136,17 +1102,14 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     innsynskravJSON.put("journalpost", journalpostDTO.getId());
     innsynskravBestillingJSON.put("innsynskrav", new JSONArray().put(innsynskravJSON));
 
-    // Make IPSender fail the first time, then succed the second time
+    // Make the integrasjonspunkt client fail the first time, then succeed the second time
     when(ipSender.sendInnsynskrav(
             any(String.class),
             any(String.class),
             any(String.class),
             any(String.class),
-            any(String.class),
-            any(String.class),
-            any(String.class),
-            any(Integer.class)))
-        .thenThrow(new IPConnectionException("", null));
+            any(String.class)))
+        .thenThrow(new NetworkException(""));
 
     // Insert InnsynskravBestilling
     var response = post("/innsynskravBestilling", innsynskravBestillingJSON);
@@ -1178,10 +1141,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
                       any(String.class),
                       any(String.class),
                       any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(Integer.class));
+                      any(String.class));
 
               // Two mails should be sent (Verification link and confirmation)
               verify(javaMailSender, times(2)).send(any(MimeMessage.class));
@@ -1208,10 +1168,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
                       any(String.class),
                       any(String.class),
                       any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(Integer.class));
+                      any(String.class));
             });
 
     // Check that the innsynskrav isn't verified
@@ -1233,10 +1190,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
                       any(String.class),
                       any(String.class),
                       any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(Integer.class));
+                      any(String.class));
             });
 
     // Check that the innsynskrav isn't verified
@@ -1258,10 +1212,7 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
                       any(String.class),
                       any(String.class),
                       any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(String.class),
-                      any(Integer.class));
+                      any(String.class));
             });
 
     // Check that the innsynskrav is verified
@@ -1523,24 +1474,22 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     innsynskravBestillingDTO = gson.fromJson(response.getBody(), InnsynskravBestillingDTO.class);
     assertEquals(true, innsynskravBestillingDTO.getVerified());
 
-    // Verify that IPSender was called
+    // Verify that the integrasjonspunkt client was called
     Awaitility.await()
         .untilAsserted(
             () ->
                 verify(ipSender, times(1))
                     .sendInnsynskrav(
                         any(), // Order.xml
-                        any(String.class), // transaction id
                         any(),
                         any(),
                         any(),
-                        any(String.class), // mail content
-                        any(String.class), // IP orgnummer
-                        any(Integer.class) // expectedResponseTimeoutDays
+                        any(String.class) // mail content
                         ));
 
     // Verify that confirmation email was sent to user, and email to enhetNoEF
-    verify(javaMailSender, times(3)).send(any(MimeMessage.class));
+    Awaitility.await()
+        .untilAsserted(() -> verify(javaMailSender, times(3)).send(any(MimeMessage.class)));
 
     // Delete the InnsynskravBestilling
     response = deleteAdmin("/innsynskravBestilling/" + innsynskravBestillingId);
@@ -1637,20 +1586,17 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
     var orderCaptor = ArgumentCaptor.forClass(String.class);
     var mailCaptor = ArgumentCaptor.forClass(String.class);
 
-    // Verify that IPSender was called
+    // Verify that the integrasjonspunkt client was called
     Awaitility.await()
         .untilAsserted(
             () ->
                 verify(ipSender, times(1))
                     .sendInnsynskrav(
                         orderCaptor.capture(), // Order.xml
-                        any(String.class), // transaction id
                         eq(enhetOrderV2DTO.getOrgnummer()), // handteresAv
                         eq(enhetOrderV2DTO.getOrgnummer()),
                         eq(enhetOrderV2DTO.getInnsynskravEpost()),
-                        mailCaptor.capture(), // mail content
-                        any(String.class), // IP orgnummer
-                        any(Integer.class) // expectedResponseTimeoutDays
+                        mailCaptor.capture() // mail content
                         ));
 
     // Verify contents of order.xml. Replace placeholders with runtime values.
@@ -1824,11 +1770,15 @@ class InnsynskravBestillingControllerTest extends EinnsynControllerTestBase {
   private String findMailTextContaining(List<MimeMessage> messages, String expectedText)
       throws Exception {
     for (var message : messages) {
-      var textContent = getTxtContent(message);
+      var textContent = normalizeLineEndings(getTxtContent(message));
       if (textContent.contains(expectedText)) {
         return textContent;
       }
     }
     throw new NoSuchElementException("Could not find mail containing: " + expectedText);
+  }
+
+  private String normalizeLineEndings(String text) {
+    return text.replace("\r\n", "\n");
   }
 }
